# scrapeurIA

./: .gitignore
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: export.py  scraping.py  templates.py
backend/app/core/: config.py
backend/app/database/: mongodb.py
backend/app/models/: scraping_result.py  scraping_task.py  template.py
backend/app/scripts/: cleanup_db.py  db_cleanup.py
backend/app/services/export/: base.py  csv_exporter.py  excel_exporter.py  json_exporter.py  manager.py
backend/app/services/llm/: ollama_client.py
backend/app/services/proxy/: manager.py
backend/app/services/scraping/: manager.py
backend/app/services/scraping/strategies/: base.py  static.py  static_strategy.py
backend/app/services/template/: manager.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/scraping/: ResultViewer.vue  ScrapingForm.vue  TaskMonitor.vue
frontend/src/components/shared/: Icon.vue  Modal.vue  Notification.vue  Notifications.vue
frontend/src/composables/: useNotification.ts
frontend/src/config/: index.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: notification.ts  scraping.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  NewTask.vue  Results.vue  Templates.vue
